--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
+    <style>
+        *{
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: 40px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+
+    
 
 
     <script>
         var nome = window.prompt('Qual é seu nome? ')
-        document.write(`Olá ${nome}. Seu nome tem ${nome.length} letras.`)
+        document.write(`Olá ${nome}. Seu nome tem ${nome.length} letras. <br>`) 
+        document.write(`Seu nome em maisculas é ${nome.toUpperCase()} <br>`)
+        document.write(`Seu nome em minusculas ${nome.toLocaleLowerCase()}`)
+
     </script>
     
 </body>
