finalizando exercicios while

--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -15,11 +15,10 @@
 
     <section>
         <div>
-            <label for="numero">Numero: </label>
-            <input type="number" name="numero" id="numero">
-            <input type="button" value="Gerar Tabuada" onclick="clicar()">
+            Número: <input type="number" name="numero" id="numero">
+            <input type="button" value="Fazer Tabuada" onclick="clicar()">
         </div>
-        <div id="res">
+        <div>
             <select name="tab" id="tab" size="10">
                 <option value="Digite o número acima">Digite um número acima</option>
             </select> <br> <br>
